<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:background="@color/blue">

    <TextView
        android:id="@+id/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/do_you_want_to_disconnect"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp" />

    <Button
        android:id="@+id/disconnect_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@drawable/custom_yesbtn_layout"
        android:text="@string/disconnect" />

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt"
        android:layout_margin="10dp"
        android:layout_toStartOf="@+id/disconnect_btn"
        android:background="@drawable/custom_yesbtn_layout"
        android:text="@string/cancel" />


</RelativeLayout>