<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customborder"
    android:orientation="vertical"
    android:weightSum="5">


    <LinearLayout
        android:layout_width="@dimen/_102sdp"
        android:layout_height="@dimen/_102sdp"
        android:layout_gravity="center"
        android:background="@drawable/customborder_logo"
        android:gravity="center">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/nativeRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />


    </RelativeLayout>

    <TextView
        android:id="@+id/textViewexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/are_you_sure_you_want_to_exit"
        android:textColor="@color/white"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnExit"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:background="@drawable/custom_yesbtn_layout"
            android:text="@string/yes"
            android:textColor="@color/blue"
            android:textSize="18sp" />

        <Button
            android:id="@+id/btnCloseDialog"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_5sdp"
            android:layout_marginStart="@dimen/_25sdp"
            android:background="@drawable/custom_yesbtn_layout"
            android:text="@string/no"
            android:textColor="@color/blue"
            android:textSize="18sp" />

    </LinearLayout>


</LinearLayout>