<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/blue"
        app:titleTextColor="@color/white" />


    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:orientation="vertical"
        android:weightSum="5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/mainLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:srcCompat="@drawable/logo" />


            </RelativeLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="10dp"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Unlock Premium Servers\n\t\t Enjoy Ad Free Service"
                    android:textColor="@color/blue"
                    android:textSize="@dimen/_20ssp"
                    android:textStyle="bold" />


            </RelativeLayout>


        </LinearLayout>


        <HorizontalScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="2.5"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="162dp"
                    android:layout_height="228dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="25dp"
                            android:layout_marginTop="90dp"
                            android:text="@string/monthly"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/one_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="160dp"
                            android:button="@drawable/bg_checkbox"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="130dp"
                            android:text="@string/vip_price_month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="103dp"
                            android:layout_height="84dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/ic_crown" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:layout_width="162dp"
                    android:layout_height="228dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginTop="90dp"
                            android:text="  3 Month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/three_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="160dp"
                            android:button="@drawable/bg_checkbox"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="130dp"
                            android:text="@string/vip_price_3month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="103dp"
                            android:layout_height="84dp"
                            android:layout_marginLeft="10dp"
                            android:background="@drawable/ic_crown" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="162dp"
                    android:layout_height="228dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">

                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="15dp"
                            android:layout_marginTop="90dp"
                            android:text="@string/_6_month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/six_month"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="160dp"
                            android:button="@drawable/bg_checkbox"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="35dp"
                            android:layout_marginTop="130dp"
                            android:text="@string/vip_price_6month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="103dp"
                            android:layout_height="84dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/ic_crown" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="162dp"
                    android:layout_height="228dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"

                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="5dp"
                    app:cardCornerRadius="@dimen/_5sdp"
                    app:cardUseCompatPadding="true">


                    <RelativeLayout
                        android:layout_width="123dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="13dp"
                            android:layout_marginTop="90dp"
                            android:text="@string/_12_month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <RadioButton
                            android:id="@+id/one_year"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="50dp"
                            android:layout_marginTop="160dp"
                            android:button="@drawable/bg_checkbox"
                            android:gravity="bottom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="30dp"
                            android:layout_marginTop="130dp"
                            android:text="@string/vip_price_12month"
                            android:textColor="@color/blue"
                            android:textSize="@dimen/_18ssp"
                            android:textStyle="bold" />

                        <ImageView
                            android:layout_width="103dp"
                            android:layout_height="84dp"
                            android:layout_marginStart="10dp"
                            android:background="@drawable/ic_crown" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>


            </LinearLayout>

        </HorizontalScrollView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/all_pur"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="@dimen/_5sdp"
                android:layout_marginBottom="10dp"
                android:background="@color/blue"
                android:text="@string/buy_now"
                android:textColor="@color/white"
                android:textSize="@dimen/_16ssp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>